// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers getGainersAndLosersByIndex: API Response Validation 1`] = `
Array [
  Object {
    "gainers": Array [
      "priority: number",
      "symbol: string | null",
      "identifier: string | null",
      "series: string | null",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string | null",
      "yearHigh: number",
      "ffmc: number",
      "yearLow: number",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string | null",
      "chart365dPath: string | null",
      "date30dAgo: string | null",
      "perChange30d: number",
      "chart30dPath: string | null",
      "chartTodayPath: string | null",
      Object {
        "meta": Array [
          "symbol: string | null",
          "companyName: string | null",
          Object {
            "activeSeries": "string",
          },
          Object {
            "debtSeries": Array [],
          },
          Object {
            "tempSuspendedSeries": Array [],
          },
          "isFNOSec: boolean",
          "isCASec: boolean",
          "isSLBSec: boolean",
          "isDebtSec: boolean",
          "isSuspended: boolean",
          "isETFSec: boolean",
          "isDelisted: boolean",
          "isin: string | null",
        ],
      },
    ],
  },
  Object {
    "losers": Array [
      "priority: number",
      "symbol: string | null",
      "identifier: string | null",
      "series: string | null",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string | null",
      "yearHigh: number",
      "ffmc: number",
      "yearLow: number",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string | null",
      "chart365dPath: string | null",
      "date30dAgo: string | null",
      "perChange30d: number",
      "chart30dPath: string | null",
      "chartTodayPath: string | null",
      Object {
        "meta": Array [
          "symbol: string | null",
          "companyName: string | null",
          "industry: string | null",
          Object {
            "activeSeries": "string",
          },
          Object {
            "debtSeries": Array [],
          },
          Object {
            "tempSuspendedSeries": "string",
          },
          "isFNOSec: boolean",
          "isCASec: boolean",
          "isSLBSec: boolean",
          "isDebtSec: boolean",
          "isSuspended: boolean",
          "isETFSec: boolean",
          "isDelisted: boolean",
          "isin: string | null",
        ],
      },
    ],
  },
]
`;

exports[`Helpers getMostActiveEquities: API Response Validation 1`] = `
Array [
  Object {
    "byVolume": Array [
      "priority: number",
      "symbol: string | null",
      "identifier: string | null",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "ffmc: number",
      "yearHigh: number",
      "yearLow: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string | null",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string | null",
      "chart365dPath: string | null",
      "date30dAgo: string | null",
      "perChange30d: number",
      "chart30dPath: string | null",
      "chartTodayPath: string | null",
    ],
  },
  Object {
    "byValue": Array [
      "priority: number",
      "symbol: string | null",
      "identifier: string | null",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "ffmc: number",
      "yearHigh: number",
      "yearLow: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string | null",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string | null",
      "chart365dPath: string | null",
      "date30dAgo: string | null",
      "perChange30d: number",
      "chart30dPath: string | null",
      "chartTodayPath: string | null",
    ],
  },
]
`;
